# pad

./: .gitignore  AGENTS.md  README.md  README_ZH.md  index.md  install.sh  plan.md
rust-tui/: Cargo.toml  index.md
rust-tui/.github/: index.md
rust-tui/.github/workflows/: ci.yml  index.md  release.yml
rust-tui/assets/: index.md
rust-tui/assets/prompts/: codex.md  codex_index.md  codex_jailbreak.md  index.md
rust-tui/scripts/: index.md
rust-tui/scripts/ci/: index.md  smoke_tmux.sh
rust-tui/src/: bootstrap.rs  bootstrap_tests.rs  claude_history.rs  cli.rs  cli_tests.rs  codex_provider_sync.rs  codex_rollout.rs  codex_runtime.rs  codex_state.rs  detector.rs  detector_tests.rs  event.rs  fuzzy.rs  fuzzy_tests.rs  hook.rs  i18n.rs  index.md  logger.rs  main.rs  model.rs  notify.rs  opencode_text.rs  opencode_text_tests.rs  paths.rs  pipe.rs  preview_source.rs  pty.rs  relay.rs  runtime_status.rs  scanner.rs  session.rs  session_cache.rs  session_continuity.rs  shell_quote.rs  shell_quote_tests.rs  shutdown.rs  sound.rs  startup.rs  system_check.rs  telegram.rs  (+16 more)
rust-tui/src/agent_resume/: catalog.rs  catalog_tests.rs  cli.rs  index.md  mod.rs  model.rs  runner.rs
rust-tui/src/app/: actions.rs  async_ops.rs  clipboard.rs  clipboard_tests.rs  display_scope.rs  hooks.rs  index.md  lifecycle.rs  mod.rs  navigation.rs  preview.rs  state.rs  time.rs
rust-tui/src/browser_remote/: browser.rs  browser_tests.rs  cli.rs  cli_tests.rs  index.md  mod.rs  remote.rs  remote_tests.rs
rust-tui/src/chat/: approval.rs  backend.rs  index.md  mod.rs
rust-tui/src/i18n/: de.rs  (+8 more)
(+1573 files in other folders)
