[package]
name = "pad"
version = "0.6.11"
edition = "2021"
authors = ["T1mn <tinggofun@gmail.com>"]
description = "PAD (Panel for Agent Development) - tmux-first workspace for AI agents"
license = "MIT"
repository = "https://github.com/T1mn/pad"

[dependencies]
crossterm = "0.28"
dirs = "5.0"
md5 = "0.7"
nix = { version = "0.27", features = ["term"] }
libc = "0.2"
nucleo-matcher = "0.3"
rand = "0.8"
ratatui = "0.30"
tui-markdown = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }

# Unix-only PTY support
[target.'cfg(unix)'.dependencies]
pty = "0.2"

[profile.release]
opt-level = 3
lto = true

# 更激进的优化配置（用于分发）
[profile.dist]
inherits = "release"
opt-level = "z"      # 优化体积而非速度
lto = true
strip = true
codegen-units = 1
panic = "abort"
